	* sdas/asxxsrc/asxxxx.h,
	* sdas/asxxsrc/sdas.c,
	* sdas/asxxsrc/strcmpi.c: cosmetic, replaced tabs with spaces
	* sdas/asxxsrc/asmain.c (asmbl): error on multiple mnemonics on one line
	* support/cpp/libcpp/include/cpplib.h: added PREV_NL
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes, cpp_output_line),
	* support/cpp/c-ppoutput.c (scan_translation_unit): fix macros w/o __asm

2010-12-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/cpp/c-ppoutput.c (scan_translation_unit): fix bug 1505956/1406219
	* support/cpp/libcpp/include/cpplib.h: added IN_ASM
	* support/cpp/libcpp/internal.h: added n__endasm to spec_nodes
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes): return int in_asm on
	  continued inline asm lines,
	  (_cpp_lex_direct): set/reset in_asm flag,
	  (cpp_output_line): insert __endasm; __asm to fix bug 1505956/1406219
	* support/cpp/libcpp/macro.c (macro_real_token_count): fixed warning
	* support/cpp/sdcpp.c (sdcpp_init_options): init n__endasm

2010-12-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCCdwarf2.c, src/SDCCset.c, src/pic16/pcode.c:
	  fixed some defects, reported by Wipro DeepCheck static analysis tool

2010-12-13 Borut Razem <borut.razem AT siol.net>

	* src/pic14/main.c, src/pic16/main.c:
	  fixed bug #3113082: Filenames with spaces fail on pic backend

2010-12-11 Borut Razem <borut.razem AT siol.net>

	* src/pic14/main.c:
	  fixed bug #3135245: --use-non-free set the wrong dir for the lib

2010-12-10 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c:
	  Fixed signed comparison for gbz80.

2010-12-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Optimized boolean ternary operator.

2010-12-06 Borut Razem <borut.razem AT siol.net>

	* src/Makefile.in, src/SDCCmain.c, src/src.dsp,
	  src/pic14/main.c, src/z80/main.c, src/pic16/main.c,
	  src/ds390/main.c, src/SDCCsystem.c, src/SDCCsystem.h:
	  support/Util/MySystem.[ch] moved / renamed src/SDCCsystem.[ch]